--- a/EloHeaven/Views/Home/Index.cshtml
+++ b/EloHeaven/Views/Home/Index.cshtml
@@ -16,32 +16,29 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
+                </button>-->
+                <a class="navbar-brand" href="#">Elo Heaven</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a ui-sref="search">Search</a></li>
-                    <li><a ui-sref="apply.terms">Apply</a></li>
-                    <li><a ui-sref="inhouses">Mentored Inhouses</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <eh-notifications-list user="user"></eh-notifications-list>
                 </ul>
             </div>
         </div>
     </div>
     <div class="container body-content">
         <div ui-view>
-
         </div>
 
         <hr />
         <footer>
-            <p>&copy; Elo Heaven Angular Mockup - For testing purposes only!</p>
+            <p>&copy; Matthew Ellwood 2016 - Elo Heaven Alpha 1 - All Feedback Appreciated!</p>
+            <p>Elo Heaven isn't endorsed by Riot Games and doesn't reflect the views or opinions of Riot Games or anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.</p>
         </footer>
     </div>
 
