Added info messages for more clarity :tm:

--- a/EloHeaven/Content/Site.css
+++ b/EloHeaven/Content/Site.css
@@ -451,3 +451,9 @@ textarea.resize-vertical {
 .team-blue {
     color: #2747e8;
 }
+
+.alert-sm {
+    margin-bottom: 5px;
+    padding: 5px;
+    display: inline-block;
+}
