Fixed the title saying Mockup

--- a/EloHeaven/Views/Home/Index.cshtml
+++ b/EloHeaven/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elo Heaven Mockup</title>
+    <title>Elo Heaven</title>
 
     <link href="/Content/bootstrap.css" rel="stylesheet" />
     <link href="/Content/Site.css" rel="stylesheet" />
