--- a/EloHeaven/Views/Home/Index.cshtml
+++ b/EloHeaven/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.Azure
+<!DOCTYPE html>
 <html ng-app="eloHeaven">
 <head>
     <meta charset="utf-8" />
@@ -10,7 +11,17 @@
     <link rel="stylesheet" href="/Content/font-awesome.min.css" />
     <link href="/Content/angular-toastr.min.css" rel="stylesheet" />
     <link href="/Content/jquery-ui.css" rel="stylesheet" />
-    <link href="/Content/selectize.bootstrap3.css" rel="stylesheet" />
+    <link href="/Content/selectize.bootstrap3.css" rel="stylesheet"/>
+    <script type="text/javascript">
+        var appInsights=window.appInsights||function(config){
+            function r(config){t[config]=function(){var i=arguments;t.queue.push(function(){t[config].apply(t,i)})}}var t={config:config},u=document,e=window,o="script",s=u.createElement(o),i,f;for(s.src=config.url||"//az416426.vo.msecnd.net/scripts/a/ai.0.js",u.getElementsByTagName(o)[0].parentNode.appendChild(s),t.cookie=u.cookie,t.queue=[],i=["Event","Exception","Metric","PageView","Trace"];i.length;)r("track"+i.pop());return r("setAuthenticatedUserContext"),r("clearAuthenticatedUserContext"),config.disableExceptionTracking||(i="onerror",r("_"+i),f=e[i],e[i]=function(config,r,u,e,o){var s=f&&f(config,r,u,e,o);return s!==!0&&t["_"+i](config,r,u,e,o),s}),t
+        }({
+            instrumentationKey:"@CloudConfigurationManager.GetSetting("InstrumentationKey")"
+        });
+
+        window.appInsights=appInsights;
+        appInsights.trackPageView();
+    </script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
