Started working on allowing users to add their summoners to their accounts

--- a/EloHeaven/Views/Home/Index.cshtml
+++ b/EloHeaven/Views/Home/Index.cshtml
@@ -87,6 +87,8 @@
     <script type="text/javascript" src="/App/Shared/starRating.service.js"></script>
     <script type="text/javascript" src="/App/Mentors/championList.service.js"></script>
     <script type="text/javascript" src="/App/Inhouses/inhouse.service.js"></script>
+    <script type="text/javascript" src="/App/Account/account.service.js"></script>
+    <script type="text/javascript" src="/App/region.service.js"></script>
 
     <script type="text/javascript" src="/App/Shared/timezoneData.constant.js"></script>
     <script type="text/javascript" src="/App/Shared/seaal.constants.js"></script>
@@ -104,6 +106,7 @@
     <script type="text/javascript" src="/App/Mentors/championList.directive.js"></script>
     <script type="text/javascript" src="/App/Shared/timezonePicker.directive.js"></script>
     <script type="text/javascript" src="/App/Inhouses/playerCard.directive.js"></script>
+    <script type="text/javascript" src="/App/Account/leagueAccounts.directive.js"></script>
 
     <script type="text/javascript" src="/App/Mentors/search.controller.js"></script>
     <script type="text/javascript" src="/App/Mentors/Application/terms/terms.controller.js"></script>
@@ -115,6 +118,8 @@
     <script type="text/javascript" src="/App/Mentors/Application/confirmation/confirmation.controller.js"></script>
     <script type="text/javascript" src="/App/Mentors/Application/application.controller.js"></script>
     <script type="text/javascript" src="/App/Inhouses/inhouse.controller.js"></script>
+
+    <script type="text/javascript" src="/App/Account/account.controller.js"></script>
 
 </body>
 
