Can now verify accounts that have already been added

--- a/EloHeaven/Views/Home/Index.cshtml
+++ b/EloHeaven/Views/Home/Index.cshtml
@@ -89,6 +89,7 @@
     <script type="text/javascript" src="/App/Inhouses/inhouse.service.js"></script>
     <script type="text/javascript" src="/App/Account/account.service.js"></script>
     <script type="text/javascript" src="/App/region.service.js"></script>
+    <script type="text/javascript" src="/App/Account/Summoners/confirmSummonerModal.service.js"></script>
 
     <script type="text/javascript" src="/App/Shared/timezoneData.constant.js"></script>
     <script type="text/javascript" src="/App/Shared/seaal.constants.js"></script>
