abstracted $http calls with a requestService

--- a/EloHeaven/Views/Home/Index.cshtml
+++ b/EloHeaven/Views/Home/Index.cshtml
@@ -81,6 +81,7 @@
     <script type="text/javascript" src="/App/Inhouses/inhouses.module.js"></script>
 
     <script type="text/javascript" src="/App/Mentors/Application/application.service.js"></script>
+    <script type="text/javascript" src="/App/Shared/request.service.js"></script>
     <script type="text/javascript" src="/App/Core/leagueApi.service.js"></script>
     <script type="text/javascript" src="/App/Mentors/search.service.js"></script>
     <script type="text/javascript" src="/App/notifications.service.js"></script>
