Can now remove summoners from an account

--- a/EloHeaven/Views/Home/Index.cshtml
+++ b/EloHeaven/Views/Home/Index.cshtml
@@ -91,6 +91,7 @@
     <script type="text/javascript" src="/App/Account/account.service.js"></script>
     <script type="text/javascript" src="/App/region.service.js"></script>
     <script type="text/javascript" src="/App/Account/Summoners/verifySummonerModal.service.js"></script>
+    <script type="text/javascript" src="/App/Account/Summoners/removeSummonerModal.service.js"></script>
 
     <script type="text/javascript" src="/App/Shared/timezoneData.constant.js"></script>
     <script type="text/javascript" src="/App/Shared/seaal.constants.js"></script>
@@ -120,6 +121,7 @@
     <script type="text/javascript" src="/App/Mentors/Application/confirmation/confirmation.controller.js"></script>
     <script type="text/javascript" src="/App/Mentors/Application/application.controller.js"></script>
     <script type="text/javascript" src="/App/Inhouses/inhouse.controller.js"></script>
+    <script type="text/javascript" src="/App/Account/Summoners/removeSummoner.controller.js"></script>
 
     <script type="text/javascript" src="/App/Account/account.controller.js"></script>
 
