Angular refactoring - html files now properly state their type and module format improved

--- a/EloHeaven/Views/Home/Index.cshtml
+++ b/EloHeaven/Views/Home/Index.cshtml
@@ -76,7 +76,7 @@
 
     <script type="text/javascript" src="/App/Shared/seaal.module.js"></script>
     <script type="text/javascript" src="/App/eloHeaven.module.js"></script>
-    <script type="text/javascript" src="/App/Core/core.module.js"></script>
+    <script type="text/javascript" src="/App/Core/eloHeaven.core.module.js"></script>
     <script type="text/javascript" src="/App/Mentors/mentors.module.js"></script>
     <script type="text/javascript" src="/App/Inhouses/inhouses.module.js"></script>
 
@@ -84,12 +84,12 @@
     <script type="text/javascript" src="/App/Shared/request.service.js"></script>
     <script type="text/javascript" src="/App/Core/leagueApi.service.js"></script>
     <script type="text/javascript" src="/App/Mentors/search.service.js"></script>
-    <script type="text/javascript" src="/App/notifications.service.js"></script>
+    <script type="text/javascript" src="/App/Core/Notifications/notifications.service.js"></script>
     <script type="text/javascript" src="/App/Shared/starRating.service.js"></script>
     <script type="text/javascript" src="/App/Mentors/championList.service.js"></script>
     <script type="text/javascript" src="/App/Inhouses/inhouse.service.js"></script>
     <script type="text/javascript" src="/App/Account/account.service.js"></script>
-    <script type="text/javascript" src="/App/region.service.js"></script>
+    <script type="text/javascript" src="/App/Core/region.service.js"></script>
     <script type="text/javascript" src="/App/Account/Summoners/verifySummonerModal.service.js"></script>
     <script type="text/javascript" src="/App/Account/Summoners/removeSummonerModal.service.js"></script>
 
@@ -101,10 +101,10 @@
 
     <script type="text/javascript" src="/App/Shared/selectall.directive.js"></script>
     <script type="text/javascript" src="/App/Shared/starRating.directive.js"></script>
-    <script type="text/javascript" src="/App/mentorCard.directive.js"></script>
+    <script type="text/javascript" src="/App/Core/mentorCard.directive.js"></script>
     <script type="text/javascript" src="/App/Core/leaguePicture.directive.js"></script>
-    <script type="text/javascript" src="/App/profilePicture.directive.js"></script>
-    <script type="text/javascript" src="/App/notificationsList.directive.js"></script>
+    <script type="text/javascript" src="/App/Core/profilePicture.directive.js"></script>
+    <script type="text/javascript" src="/App/Core/Notifications/notificationsList.directive.js"></script>
     <script type="text/javascript" src="/App/Core/summonerList.directive.js"></script>
     <script type="text/javascript" src="/App/Mentors/championList.directive.js"></script>
     <script type="text/javascript" src="/App/Shared/timezonePicker.directive.js"></script>
